<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gather</string>
    <string name="action_profile">Profile</string>
    <string name="intro">How about a game tonight, or a hike
    \nwith some friends tomorrow perhaps?
    \nPress the button below to get started!</string>
    <string name="title_profile_activity">Name</string>
    <string name="hello_world">Hello world!</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="action_save">Save</string>
    <string name="action_done">Done</string>
    <string name="no_events">No upcoming invites.</string>
    <string name="invite_button">invite button</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_lowercase">cancel</string>
    <string name="select_friends">Select some friends</string>
    <string name="next">Next</string>
    <string name="facebook_app_id">889415211166669</string>

    <!-- Event Clicked Text -->
    <string name="event_joining">Joining</string>
    <string name="event_are_you_in">Are you in?</string>
    <string name="event_you_are_in">Nice. you\'re in!</string>
    <string name="event_invite">Invite</string>
    <string name="event_chat_send">Send</string>
    <string name="event_join_conversation">Join the conversation by accepting the invitation</string>
    <string name="search">Search</string>
    <string name="friends">Friends</string>
    <string name="lists">Lists</string>
    <string name="create_list">Create Invite List</string>
    <string name="title_activity_testing">TestingActivity</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="create_event_header">Now set the details</string>
    <string name="send">Send</string>
    <string name="other">Other</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="Today">Today</string>
    <string name="event_title_edit">What do you wanna do?</string>
    <string name="how_many_friends">How many friends can join?</string>
    <string name="invite_only">Invite Only</string>
    <string name="invite_only_desc">Only the friends you invite may join</string>
    <string name="change">Change</string>
    <string name="friends_of_friends">Friends of friends</string>
    <string name="friends_of_friends_desc">The friends you invite can also invite their friends to join</string>
    <string name="infinity">∞</string>
    <string name="title_activity_create_list">CreateList</string>
    <string name="back">Back</string>
    <string name="create">Create</string>
    <string name="new_list">New list</string>
    <string name="list_name">Name the list</string>
    <string name="add_friends">Friends to add to the invite list</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="user_auth_token"></string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome">Welcome to Gather!</string>
    <string name="welcome_desc">United States +1</string>
    <string name="continue_button">Continue</string>
    <string name="sign_up_gather">Welcome!</string>
    <string name="sign_up_desc">Congratulations, you\'re in! Fill out the form below to get started</string>
    <string name="add_photo">Add Photo</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="enter_code">Enter Code</string>
    <string name="code_desc">We sent a verification code to</string>
    <string name="cancel_event">cancel Event</string>
    <string name="whos_in">Who\'s in</string>
    <string name="title_activity_invite_more">InviteMoreActivity</string>
    <string name="title_modal_dialog_sent_invites">DialogSuccess</string>
    <string name="edit">edit</string>
    <string name="update_invite">Update Invite</string>
    <string name="soon">Soon</string>
    <string name="lists_desc"><![CDATA[Now you can create lists of friends to make sending invites even easier. Select a few friends, click <b>Create New List</b>, name your list and you\'re done!]]></string>
    <string name="tbd_desc">Let your friends know what you are interested in doing with them. No pressure to know a date. Select TBD (To be determined) and figure it out together. There is no better time than now to send an invite!</string>
    <string name="tbd_title">Today, Soon, Other</string>
    <string name="got_it">GOT IT</string>
    <string name="contacts_access_header">Gather your friends</string>
    <string name="accept">Accept</string>
    <string name="contact_access_main">See which of your friends are using Gather and help your friends find you!</string>
    <string name="contact_access_second">* We promise to never spam you or your contacts.</string>
    <string name="not_now">Not Now</string>
    <string name="title_activity_update_event">UpdateEventActivity</string>
    <string name="title_activity_update_list">UpdateListActivity</string>
    <string name="update_list">Update Invite List</string>
    <string name="update">Update</string>
    <string name="share">Share</string>
    <string name="facebook">Facebook</string>
    <string name="copy_text">Copy Link</string>
    <string name="twitter">Twitter</string>
    <string name="awesome">Awesome!</string>
    <string name="later">Later</string>
    <string name="list_siggestion_friends_text">What is one thing you love doing with your friends?</string>
    <string name="movies">ex: Movies</string>
    <string name="save">Save</string>
    <string name="x">X</string>
    <string name="you_invited">You Invited</string>
    <string name="invited">Invited</string>
    <string name="would_you_like_to_list">Would you like to create an invite list from the people you invited?</string>
    <string name="get_started">Get Started</string>
    <string name="plus_one">+1</string>
    <string name="no_events_new">No need to know the date, time, or location. Send them an idea and figure it out together!</string>
    <string name="create_an_invite">Create an Invite</string>
    <string name="grant_access">Grant Access</string>
    <string name="create_invite">Create Invite</string>
    <string name="invite_info">1. Invite info</string>
    <string name="pick_date">When?</string>
    <string name="more_options">More options</string>
    <string name="pick_a_color">Pick a color:</string>
    <string name="allow_friends">Allow friends to invite their friends:</string>
    <string name="unlimited_friends">Unlimited friends</string>
    <string name="or">or</string>
    <string name="set_a_limit">Set a limit</string>
    <string name="select_friendz">SELECT FRIENDS</string>
    <string name="less_options">Less options</string>
    <string name="invite">Invite</string>
    <string name="make_everyone_admin">Make everyone who is part of the invite list an admin</string>
    <string name="what_is_an_admin">What is an Admin?</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="first_name">first name</string>
    <string name="change_photo">Change Photo</string>
    <string name="join">Join</string>
    <string name="join_the_invite_and_be_a_part_of_the_conversation">Join the invite to coordinate with your friends</string>
    <string name="what_do_you_want_to_do">What do you want to do?</string>
    <string name="pin_comment">Pin comment</string>
    <string name="copy_comment_text">Copy Text</string>
    <string name="view_profile">View Profile</string>
    <string name="we_use_your_contact_book_to_allow_you_to_invite_anyone_in_your_contacts_list_and_match_you_with_your_friends_using_the_app">We use your contact book to allow you to invite anyone in your contacts list and match you with your friends using the app.</string>
    <string name="be_the_first_to_comment">Be the first to share your ideas</string>
    <string name="add_to_invite_lists">Add to invite lists</string>
    <string name="add_to_an_invite_list">Add to an invite list</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="feedback">Feedback</string>
    <string name="download_agreement">Download agreement</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="can_t_connect">Can\'t Connect</string>
    <string name="tap_to_refresh">Tap to refresh</string>
    <string name="add_friends_to_invite_list">Add friends to invite list</string>
    <string name="add_friends_text">Add Friends</string>
    <string name="location">Location</string>
    <string name="location_access_main">We show you all the activities you can join with your friends no matter where you are in the world.</string>
    <string name="location_access_secondary">Granting access to your location allow us to make sure you are always in the know.</string>
    <string name="invite_full_title">Oh no! This invite is full.</string>
    <string name="invite_full_desc">The amount of people that are able to join this invite has been met. Keep an eye out next time so you won\'t miss your chance to be a part of the fun!</string>
    <string name="effortless_invitations">Effortless invitations</string>
    <string name="username">username</string>
    <string name="exciting">Exciting!</string>
    <string name="pick_a_photo">Pick a photo</string>
    <string name="take_a_photo">Take a photo</string>


    <!--Camera plugin-->
    <string name="squarecamera__app_name">Gather</string>
    <string name="squarecamera__action_settings">Settings</string>
    <string name="squarecamera__start_image_capture">Take New Picture!</string>
    <string name="squarecamera__capture_image">Snap It!</string>
    <string name="squarecamera__save_image">Save</string>
    <string name="squarecamera__cancel">Cancel</string>
    <string name="squarecamera__swap_camera">Swap</string>
    <string name="squarecamera__flash">Flash</string>
    <string name="squarecamera__auto_flash">Auto Flash</string>
    <string name="squarecamera__no_flash">No Flash</string>
    <string name="squarecamera__recapture_image">Retake Picture</string>
    <string name="squarecamera__capturing_image">Taking New Picture</string>
    <string name="squarecamera__done">Done</string>
    <string name="squarecamera__request_write_storage_permission_text">Approval is needed to save your photo on your device</string>
    <string name="ok">OK</string>
    <string name="save_photo">Save Photo</string>
    <string name="create_invite_list">Create new invite list</string>
    <string name="change_color">Change Color</string>
    <string name="display_location_on_profile">Display location on profile</string>
    <string name="settings">Settings</string>
    <string name="got_it_button">Got it!</string>
    <string name="profile">Profile</string>
    <string name="profile_tooltip_desc">Swipe left or Tap on the profile icon to visit your profile</string>
    <string name="what_do_you_like_to_do_with_your_friends">What do you like to do with your friends?</string>
    <string name="welcome_intro">Welcome!</string>
    <string name="select_your_close_friends">Select your close friends</string>
    <string name="best_friends_selected">Close friends selected!</string>
    <string name="do_you_like_to_hangout_together">Do you like to hangout together?</string>
    <string name="open">open</string>
    <string name="add_friends_header">Add Friends</string>
    <string name="send_it">Send it!</string>
    <string name="invite_list_title">Invite List title</string>
</resources>
