<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:background="@color/white"
    >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bottom_border_light"
        >

        <com.gthr.android.view_objects.fTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_many_friends"
            android:textSize="15dp"
            android:paddingBottom="25dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:paddingBottom="10dp"
            >

            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:id="@+id/decrement"
                android:src="@drawable/decrement"
                />

            <com.gthr.android.view_objects.fTextView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:id="@+id/number_of_people"
                android:textSize="20dp"
                android:text="@string/infinity"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:gravity="center"
                />

            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:gravity="right|center_horizontal"
                android:id="@+id/increment"
                android:layout_gravity="center_vertical"
                android:src="@drawable/increment"
                />

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="30dp"
            >


            <com.gthr.android.view_objects.fTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="15dp"
                android:id="@+id/invite_type"
                android:text="@string/friends_of_friends"
                custom:typeface="sbold"
                />

            <com.gthr.android.view_objects.fTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/gray"
                android:textSize="13dp"
                android:id="@+id/invite_type_desc"
                android:text="@string/friends_of_friends_desc"
                />

        </LinearLayout>

        <com.gthr.android.view_objects.fTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:textSize="15dp"
            android:layout_alignParentRight="true"
            android:onClick="changeInviteType"
            android:paddingTop="10dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/change_invite_type"
            android:textColor="@color/invite_dark_blue"
            custom:typeface="sbold"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp" />

    </RelativeLayout>

</LinearLayout>