<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0"
        android:onClick="doNothing"
        android:clickable="true"
        android:id="@+id/overlay"
        />

    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/modal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/rounded_corners_modal"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            >

            <com.gthr.android.view_objects.fTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/lists"
                android:id="@+id/title"
                android:textSize="25dp"
                custom:typeface="bold"

                android:layout_marginBottom="20dp"
                android:layout_marginTop="35dp"
                />

            <com.gthr.android.view_objects.fTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/text"
                android:text="@string/lists_desc"
                android:textSize="18dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                />

            <Button
                android:layout_width="276dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corners_button_modal"
                android:text="@string/got_it"
                android:id="@+id/button"
                android:onClick="dismissModalShower"
                android:clickable="true"
                android:textColor="@color/white"
                android:textSize="19dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:focusable="true"
            >

            <com.makeramen.RoundedImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:src="@color/white"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="3dp"
                app:riv_oval="true" />

            <com.makeramen.RoundedImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/new_list"
                android:id="@+id/image"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="3dp"
                app:riv_oval="true" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>